# microhhview

./: .gitignore  README.md  pyproject.toml
src/microhhview/: __main__.py  animate_controls.py  axis_prefs.py  backends.py  config.py  cross_files.py  dim_controls.py  main_window.py  plot_widget.py  point_dialog.py
src/viewnc/: __main__.py  axis_prefs.py  backends.py  config.py  dim_controls.py  main_window.py  plot_widget.py  point_dialog.py
