[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "microhhview"
version = "0.1.0"
description = "Quick NetCDF/HDF5 variable viewer (line plots and pcolormesh) built on PySide6 + xarray + matplotlib"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "xarray>=2023.1",
    "netCDF4>=1.6",
    "h5netcdf>=1.1",
    "h5py>=3.8",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "colormaps>=0.5",
    "platformdirs>=4.0",
]

[project.scripts]
microhhview = "microhhview.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
